Exporting ESM with main instead of CJS (Vite build fix attempt)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "popper-2",
     "vue-3-popper-2"
   ],
-  "main": "dist/popper.cjs",
+  "main": "dist/popper.esm.js",
   "browser": "dist/popper.esm.js",
   "module": "dist/popper.esm.js",
   "unpkg": "dist/popper.min.js",
